--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/forgotPassword.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/forgotPassword.html
@@ -15,7 +15,8 @@
         <div class="forgotPass">
             <h1>Forgot Password</h1>
             <p>Enter your email below to receive password reset link.</p>
-            <form action="" class="form" id="signin" method="post">  
+            <div class="message" id="message" style="display: none;"></div>
+            <form action="/users/forgotPassword" class="form" id="forgotPass" method="post" onsubmit="sendLink(event)">  
                 <div class="input-group">
                     <div class="input-fields">
                         <input type="email" placeholder="Enter your Email Id" name='email' id='email'>
@@ -35,5 +36,48 @@
     </div>
     <footer id="footer"></footer>
     <script src="index.js"></script>
+    <script>
+		// The function to submit the form
+		function sendLink(event) {
+			event.preventDefault(); // Prevent the default form submission
+			
+			// Gather form data
+			var formData = new URLSearchParams({
+				email: document.getElementById("email").value,
+			});
+
+			// Send the AJAX request
+			fetch('/users/forgotPassword', {
+				method: 'POST',
+				headers: {
+					'Content-Type': 'application/x-www-form-urlencoded'
+				},
+				body: formData
+			})
+				.then(response => response.text())
+				.then(message => {
+					showSuccessMessage(message);
+				})
+				.catch(error => {
+					console.error('Error:', error);
+				});
+		}
+
+		// The function to show the success message
+		function showSuccessMessage(message) {
+			var successMessage = document.getElementById('message');
+			successMessage.textContent = message;
+			successMessage.style.display = 'block';
+			successMessage.style.marginTop = '10px';
+			successMessage.style.marginBottom = '10px';
+			successMessage.style.padding = '10px';
+			successMessage.style.background = '#8c592f';
+			successMessage.style.text = 'bold';
+			successMessage.style.fontWeight = '700'
+			successMessage.style.border = '2px solid grey';
+			successMessage.style.borderRadius = '5px';
+		}
+
+    </script>
 </body>  
 </html>
