--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
@@ -14,18 +14,21 @@
                 <img src="images/coffee.png">
             </div>
             <nav>
-                <ul class="navbar" id="navbar">
-                    <li><a href="register.html">Login/Register</a></li>
+                <ul class="navbar" id="navbar">      
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="orderOnline.html">Order Online</a></li>
+                    <li><a href="orderOnline.html">Giftcards</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </nav>
-        
-            <div class="search-icon" id="search-icon">
-                <img src="images/search.png" alt="Search">
+            <div class="images">
+                <div class="search-icon" id="search-icon">
+                    <img src="images/searchIcon.png" alt="Search">
+                </div>
+                <div class="user-icon" id="user-icon">
+                    <img src="images/user.png" alt="user">
+                </div>
             </div>
-
             <div class="search-bar" id="search-bar">
                 <input type="search" name="search" id="search" placeholder="Search Here!">
             </div>
