Updates Feedback Form

--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/footer.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/footer.html
@@ -23,7 +23,7 @@
             </div>
             <div class="rateAndreview">
                 <h3>Rate And Review</h3>
-                <li><a href="#feedback">Leave your Feedback here</a></li>
+                <li><a href="feedbackForm.html">Leave your Feedback here</a></li>
             </div>
             <div class="contactUs">
                 <h3>Contact Us</h3>
