--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/register.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/register.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-	<header id="header">
-
-	</header>
+	<header id="header"></header>
 	<div class="container">
 		<div class="signup">
 			<h1>Create New Account</h1>
