--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/feedbackForm.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/feedbackForm.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="ISO-8859-1">
-<title>Feedback Form</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="feedbackForm.css">
+	<title>Submit feedback Here!!</title>
 </head>
 <body>
+    <header id="header"></header>
+    <div class="container">
+        <h1>Enter your feedback here.</h1>
+        <div class="feedback">
+            <div class="message" id="message" style="display: none;"></div>
+            <form action="/users/submitFeedback" method="post" onsubmit="submitFeedback(event)">
+                <div class="input-fields">
+                    <input type="text" placeholder="Enter your First Name" name='firstName' id='firstName'>
+                </div>
+                <div class="input-fields">
+                    <input type="text" placeholder="Enter your Last Name" name='lastName' id='lastName'>
+                </div>
+                <div class="input-fields">
+                    <input type="email" placeholder="Enter your Email Id" name='email' id='email'>
+                </div>
+                <div class="input-fields">
+                    <textarea placeholder="Tell us about your experience..." name='experience' id='experience'
+                    rows="8" cols="50"></textarea>
+                </div>
+                <div class="buttons">
+                    <button type="submit" id="sign-in">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <footer id="footer"></footer>
+	<script src="index.js"></script>
+    <script>
+        function submitFeedback(event) {
+			event.preventDefault(); // Prevent the default form submission
+			
+			// Gather form data
+			var formData = new URLSearchParams({
+                firstName: document.getElementById("firstName").value,
+                lastName: document.getElementById("lastName").value,
+                email: document.getElementById("email").value,
+				experience: document.getElementById("experience").value,
+			});
 
+			// Send the AJAX request
+			fetch('/users/submitFeedback', {
+				method: 'POST',
+				headers: {
+					'Content-Type': 'application/x-www-form-urlencoded'
+				},
+				body: formData
+			})
+				.then(response => response.text())
+				.then(message => {
+					showSuccessMessage(message);
+				})
+				.catch(error => {
+					console.error('Error:', error);
+				});
+		}
+
+		// The function to show the success message
+		function showSuccessMessage(message) {
+			var successMessage = document.getElementById('message');
+			successMessage.textContent = message;
+			successMessage.style.display = 'block';
+			successMessage.style.marginTop = '10px';
+			successMessage.style.marginBottom = '10px';
+			successMessage.style.padding = '10px';
+			successMessage.style.background = '#8c592f';
+			successMessage.style.text = 'bold';
+			successMessage.style.fontWeight = '700'
+			successMessage.style.border = '2px solid grey';
+			successMessage.style.borderRadius = '5px';
+		}
+
+    </script>
+    </script>
 </body>
 </html>
