--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/resetPassword.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/resetPassword.html
@@ -14,8 +14,7 @@
 	<div class="container">
 		<div class="resetPass">
 			<h1>Reset Your Password</h1>
-			<form action="/users/resetPassword" class="form" id="resetPassword" method="post"
-				onsubmit="resetPassword(event)">
+			<form action="/users/resetPassword" class="form" id="resetPassword" method="post" onsubmit="resetPassword(event)">
 				<div class="input-group">
 					<div class="input-fields">
 						<input type="password" placeholder="Enter your New Password" name='password' id='password'>
@@ -40,7 +39,6 @@
 		const queryString = window.location.search;
 		console.log(queryString);
 		const urlParams = new URLSearchParams(queryString);
-		//const tokenValue = queryString.get('resetPasswordToken');
 		console.log(urlParams);
 		const tokenValue = urlParams.get('resetPasswordToken');
 		console.log(tokenValue);
@@ -56,13 +54,11 @@
 			}
 
 			// Gather form data
-			var formData = new FormData();
-			formData.append('password', document.getElementById("password").value);
-			formData.append('password2', document.getElementById("password2").value);
-			formData.append('token', document.getElementById("token").value);
-
-
-			console.log("Token value:", formData.get("token"));
+			var formData = new URLSearchParams({
+                password: document.getElementById("password").value,
+                password2: document.getElementById("password2").value,
+                token: document.getElementById("token").value,
+			});
 
 			// Send the AJAX request
 			fetch("/users/resetPassword", {
@@ -86,6 +82,7 @@
 				});
 		}
 		function redirectToUserPage() {
+			
 			setTimeout(function () {
 				window.location.href = 'login.html'; 
 			}, 3000); 
