--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/userPage.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/userPage.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header id="header"></header>
-    <div class="Welcome">
-        <h3></h3>
+    <div class="welcomeMessage">
+        <h3>Welcome to JavaCafe</h3>
+    </div>
+    <div class="userAccount">
+        <b>My Account</b>
     </div>
     <footer id="footer"></footer>
 	<script src="index.js"></script> 
