--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Java Cafe</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <header>
-            <div class="logo" id="logo">
-                <img src="images/coffee.png">
+
+<head>
+	<link rel="stylesheet" href="index.css">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Java Cafe</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+	<header>
+		<div class="logo" id="logo">
+			<img src="images/coffee.png">
+		</div>
+		<nav>
+			<ul class="navbar" id="navbar">
+				<li><a href="menu.html">Menu</a></li>
+				<li><a href="orderOnline.html">Order Online</a></li>
+				<li><a href="orderOnline.html">Giftcards</a></li>
+				<li><a href="aboutUs.html">About Us</a></li>
+			</ul>
+		</nav>
+		<div class="images">
+			<div class="search-icon" id="search-icon">
+				<img src="images/searchIcon.png" alt="Search">
+			</div>
+			<div class="user-icon" id="user-icon">
+				<img src="images/user.png" alt="user">
             </div>
-            <nav>
-                <ul class="navbar" id="navbar">      
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="orderOnline.html">Order Online</a></li>
-                    <li><a href="orderOnline.html">Giftcards</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                </ul>
-            </nav>
-            <div class="images">
-                <div class="search-icon" id="search-icon">
-                    <img src="images/searchIcon.png" alt="Search">
-                </div>
-                <div class="user-icon" id="user-icon">
-                    <img src="images/user.png" alt="user">
-                </div>
-            </div>
-            <div class="search-bar" id="search-bar">
-                <input type="search" name="search" id="search" placeholder="Search Here!">
-            </div>
-        </header>
-        
-    </body>
+			<div class="account-card">
+				<p>Welcome, User</p>
+				<div class="options" style="color: white;">
+					<a href="#account-settings">Account Settings</a>
+                    <a href="#help">Help</a>
+					<a href="#logout">Logout</a>
+				</div>
+			</div>
+        </div>  
+		<div class="search-bar" id="search-bar">
+			<input type="search" name="search" id="search" placeholder="Search Here!">
+		</div>
+	</header>
+
+</body>
+
 </html>
