--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/userPage.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/userPage.html
@@ -13,7 +13,12 @@
     </div>
     <div class="userAccount">
         <b>My Account</b>
+        <hr>
+        <div class="orderHistory">
+            <h5>View order History</h5>
+        </div>
     </div>
+
     <footer id="footer"></footer>
 	<script src="index.js"></script> 
 </body>
