--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/aboutUs.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/aboutUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="about.css">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Java Cafe</title>
@@ -9,6 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>   
+        <header id="header">     
+        </header>
         <!--About Us-->
         <section class="about" id="about">   
             <div class="about-image">
@@ -28,6 +30,8 @@
             </p>
         </div>
         </section>
-     
+        <footer id="footer">     
+        </footer>
+        <script src="index.js"></script>
     </body>
 </html>
