--- a/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
+++ b/JavaCafe-master/JavaCafe1/src/main/resources/static/header.html
@@ -27,10 +27,13 @@
 			<div class="search-icon" id="search-icon">
 				<img src="images/searchIcon.png" alt="Search">
 			</div>
+			<div class="shopping-cart" id="shopping-cart">
+				<img src="images/shopping-cart.png" alt="Shopping Cart">
+			</div>
 			<div class="user-icon" id="user-icon">
 				<img src="images/user.png" alt="user">
             </div>
-			<div class="account-card">
+			<div class="account-card" id="account-card" style="display: none;">
 				<p>Welcome, User</p>
 				<div class="options" style="color: white;">
 					<a href="#account-settings">Account Settings</a>
@@ -43,6 +46,7 @@
 			<input type="search" name="search" id="search" placeholder="Search Here!">
 		</div>
 	</header>
+
 
 </body>
 
